# pokenat-organizer

./: .gitignore  .pdm-python  Pipfile  README.md  pokenat.py  pyproject.toml  requirements.txt
pokenat-organizer-frontend/: .env.example  .eslintrc.cjs  .eslintrc.js  README.md  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  vite.config.ts  vue.config.js
pokenat-organizer-frontend/src/: App.vue  main.ts
pokenat-organizer-frontend/src/assets/css/: tailwind.css
pokenat-organizer-frontend/src/components/: Footer.vue  Header.vue  MobileDrawer.vue  Organizer.vue  PokedexSelector.vue  PokemonDetails.vue  SearchBar.vue
pokenat-organizer-frontend/src/locales/: en.json  fr.json
pokenat-organizer-frontend/src/models/: pokemon.model.ts
pokenat-organizer-frontend/src/services/: Analytics.service.ts  LocalData.service.ts  PokeapiData.service.ts
