[project]
name = "pokenat-organizer"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Thibaud Demay", email = "8266439+ThibaudDemay@users.noreply.github.com"},
]
dependencies = [
    "certifi==2024.8.30",
    "charset-normalizer==3.4.0",
    "idna==3.10",
    "pokebase==1.3.0",
    "requests==2.32.3",
    "urllib3==2.2.3",
]
requires-python = "==3.14.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
download_pokedex = "python3 pokenat.py --load"
